# sum_mult

./: LICENSE  README.md  setup.cfg
src/sum_mult/: __init__.py  get_config_data.py  main.py
src/sum_mult/mult/: __init__.py  mult_config.py
src/sum_mult/sum/: __init__.py  sum_config.py
src/sum_mult/summult/: __init__.py  sum_mult_config.py
