[metadata]
name = sum_mult
version = 0.0.1
author = Alexander Smirnov
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source = https://github.com/Sanek1303/sum_mult

[options]
python_requires = >=3.8
packages = sum_mult
package_dir =
    =src
zip_safe = no
